[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neoflo-logger"
version = "0.1.0"
description = "Neoflo platform structured logging SDK for Python microservices"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Neoflo AI", email = "platform@neoflo.ai" }]

# All dependencies are pinned with >= lower bounds so individual services can
# independently pin tighter versions in their own pyproject.toml without
# conflict. The SDK itself must stay flexible so it doesn't fight with whatever
# version of opentelemetry the service already has installed.
dependencies = [
    # OpenTelemetry API — defines spans, context propagation, and tracer
    # interfaces. We depend on API (not SDK) directly so that if the host
    # application already has the SDK installed, we don't duplicate it.
    "opentelemetry-api>=1.25.0",
    # Full OpenTelemetry SDK — needed to create LoggerProvider and configure
    # trace/log pipelines. Services that don't want SDK can stub this out.
    "opentelemetry-sdk>=1.25.0",
    # HTTP OTLP exporter — sends log records and traces to the collector over
    # HTTP/protobuf on port 4318. The Neoflo collector accepts both gRPC (4317)
    # and HTTP (4318); HTTP is used here as it requires no gRPC channel setup.
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    # Starlette is the ASGI framework that FastAPI is built on. We depend on
    # starlette directly (not fastapi) so middleware works in any Starlette app,
    # not just FastAPI. This keeps the middleware portable across services.
    "starlette>=0.27.0",
]

[project.optional-dependencies]
# Development dependencies — not needed in production containers
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",          # async test client for Starlette/FastAPI
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "fastapi>=0.111",       # needed for dev integration tests only
    "uvicorn>=0.30",        # same
]

[tool.setuptools.packages.find]
# src layout: Python source is under src/, not at the repo root.
# This prevents accidental imports from the working directory during development
# and is the recommended layout for installable packages (PEP 517 / setuptools).
where = ["src"]

[tool.setuptools.package-data]
# Include the py.typed marker (PEP 561) so type checkers know this package
# ships inline type stubs and they should check it as typed.
neoflo_logger = ["py.typed"]

# ---------------------------------------------------------------------------
# Black — code formatter
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]

# ---------------------------------------------------------------------------
# Ruff — fast linter (replaces flake8, isort, pyupgrade, etc.)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "B008",  # do not perform function calls in default arguments — we need it for dataclasses
]

# ---------------------------------------------------------------------------
# MyPy — static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"          # auto-detect async tests without explicit mark
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"
markers = [
    "unit: fast, no IO, pure logic tests",
    "integration: tests that require a running OTEL collector or FastAPI app",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
